# parkingslots

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: app_default.yaml  camera_layout.example.json  dataset_cnrpark_ext.yaml  dataset_pklot.yaml  model_a_mobilenetv3.yaml  model_a_mobilenetv3_mps.yaml  model_b_classic.yaml
scripts/: convert_slots.py  download_data.py  evaluate.py  fit_model_b.py  prepare_data.py  run_app.py  run_legacy_app.py  train_model_a.py
src/parking_vision/: cli.py  config.py  streamlit_app.py
src/parking_vision/data/: augmentations.py  cache.py  datasets.py  layouts.py  prepare.py  splits.py
src/parking_vision/data/adapters/: base.py  cnrpark_ext.py  pklot.py
src/parking_vision/evaluation/: report.py  runner.py
src/parking_vision/models/: base.py  factory.py  model_a_mobilenet.py  model_b_classic.py  smoothing.py
src/parking_vision/training/: checkpoints.py  engine.py  losses.py
src/parking_vision/utils/: io.py  logging.py  metrics.py  profiling.py  seed.py  video.py  visualization.py
src/parking_vision/web/: api.py  demo.py  schemas.py  state.py
src/parking_vision/web/static/: app.js  style.css
src/parking_vision/web/templates/: index.html
